@@ -1,13 +1,16 @@
 package api.backwine.controller;
 
+import api.backwine.dto.mapper.ProductPageMapper;
 import api.backwine.dto.mapper.WineMapper;
 import api.backwine.dto.request.WineRequestDto;
+import api.backwine.dto.response.ProductPageResponse;
 import api.backwine.dto.response.WineResponseDto;
 import api.backwine.model.Wine;
-import api.backwine.service.AbstractService;
+import api.backwine.service.WineService;
+import api.backwine.util.PageService;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -18,17 +21,26 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/wines")
+@RequestMapping("/api/v1/wines")
 public class WineController {
-    private final AbstractService<Wine> service;
+    private static final String DEFAULT_PAGE_SIZE = "20";
+    private static final String DEFAULT_PAGE_NUMBER = "0";
+    private static final String DEFAULT_SORT_BY = "id";
+    private final WineService wineService;
+    private final PageService pageService;
     private final WineMapper wineMapper;
+    private final ProductPageMapper<Wine, WineResponseDto> winePageMapper;
 
-    public WineController(AbstractService<Wine> service, WineMapper wineMapper) {
-        this.service = service;
+    public WineController(WineService wineService, WineMapper wineMapper, PageService pageService,
+                          ProductPageMapper<Wine, WineResponseDto> winePageMapper) {
+        this.wineService = wineService;
         this.wineMapper = wineMapper;
+        this.pageService = pageService;
+        this.winePageMapper = winePageMapper;
     }
 
     @PreAuthorize("hasRole('ADMIN')")
@@ -36,15 +48,24 @@ public class WineController {
     public ResponseEntity<WineResponseDto> create(@Valid @RequestBody
                                                   WineRequestDto wineRequestDto) {
         return new ResponseEntity<>(wineMapper.toDto(
-                service.create(wineMapper.toModel(wineRequestDto))), HttpStatus.CREATED);
+                wineService.create(wineMapper.toModel(wineRequestDto))), HttpStatus.CREATED);
     }
 
     @GetMapping
     public ResponseEntity<List<WineResponseDto>> getAll() {
-        return ResponseEntity.ok(service.getAll()
+        return ResponseEntity.ok(wineService.getAll()
                 .stream()
                 .map(wineMapper::toDto)
-                .collect(Collectors.toList()));
+                .toList());
+    }
+
+    @GetMapping("/pages")
+    public ResponseEntity<ProductPageResponse<WineResponseDto>> getWinePage(
+            @RequestParam(value = "size", defaultValue = DEFAULT_PAGE_SIZE) Integer size,
+            @RequestParam(value = "page", defaultValue = DEFAULT_PAGE_NUMBER) Integer pageNumber,
+            @RequestParam(value = "sort", defaultValue = DEFAULT_SORT_BY) String sortBy) {
+        Pageable pageable = pageService.getPageable(size, pageNumber, sortBy);
+        return ResponseEntity.ok(winePageMapper.toDto(wineService.getAll(pageable), wineMapper));
     }
 
     @PreAuthorize("hasRole('ADMIN')")
@@ -53,18 +74,18 @@ public class WineController {
                                                   @Valid @RequestBody
                                                   WineRequestDto wineRequestDto) {
         return ResponseEntity.ok(wineMapper.toDto(
-                service.update(id, wineMapper.toModel(wineRequestDto))));
+                wineService.update(id, wineMapper.toModel(wineRequestDto))));
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<WineResponseDto> get(@PathVariable Long id) {
-        return ResponseEntity.ok(wineMapper.toDto(service.getById(id)));
+        return ResponseEntity.ok(wineMapper.toDto(wineService.getById(id)));
     }
 
     @PreAuthorize("hasRole('ADMIN')")
     @DeleteMapping("/{id}")
     public ResponseEntity<String> delete(@PathVariable("id") Long id) {
-        service.deleteById(id);
+        wineService.deleteById(id);
         return ResponseEntity.ok("Success, deleted entity by id " + id);
     }
 }
